# multiversx-web3

./: .env  .gitignore  Next.txt  README.md  README.md.txt
.github/workflows/: firebase-hosting-pull-request.yml  firebase-hosting.yml
be/: Cargo.toml  supabase_fix.sql  supabase_rls_fix.sql  supabase_setup.sql
be/src/: main.rs
be/src/api/: mod.rs
be/src/auth/: mod.rs
be/src/blockchain/: mod.rs
be/src/db/: mod.rs
be/src/nft/: mod.rs
escrow-sc/output/: escrow-sc.mxsc.json
escrow-sc/src/: escrow_sc.rs
fe/: .firebaserc  firebase.json  next.config.js  package-lock.json  package.json
fe/.firebase/: hosting.ZmVcb3V0.cache  hosting.b3V0.cache
fe/.github/workflows/: firebase-hosting-merge.yml  firebase-hosting.yml
fe/lib/: firebase.js
fe/src/app/: layout.js  page.js
fe/src/app/english-learning/: page.js
fe/src/app/login/: page.js
fe/src/app/marketplace/: page.js
fe/src/app/marketplace/[id]/: page.js
fe/src/app/orders/: page.js
fe/src/app/register/: page.js
fe/src/components/: CreateNFTModal.js  ElizaChat.js  navigation.js  providers.js
fe/src/services/: api.js  auth.js  eliza.js  nft.js  wallet.js
fe/src/styles/: Auth.css  ElizaChat.css  EnglishLearning.css  Marketplace.css  NFTDetail.css  Orders.css  globals.css
