[package]
name = "be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9.2"
ethers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
postgrest = "1.0"
supabase-rust = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"